# bevy_sprite_animation

./: Cargo.toml  README.md  node.names  test.html
assets/: Zombie1.nodetree  test.node
examples/: basic_code_animation.rs  basic_load_animation.rs  zombie.rs
src/: attributes.rs  core.rs  core_new.rs  datatype_impl.rs  dot.rs  error.rs  lib.rs  node_core.rs  node_id.rs  nodes.rs  prelude.rs  serde.rs  state.rs  system_lable.rs  system_set.rs
src/nodes/: fps_node.rs  index_node.rs  match_node.rs  mod.rs  reference_node.rs  scale_node.rs  script_node.rs  variable_node.rs
