[package]
name = "bevy_sprite_animation"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.11", features = ["serialize"]}
serde = {version = "1", optional = true}
bincode = "1.3.3"
ron = {version = "0.8.0", optional = true}
#bevy-inspector-egui = {version = "*", optional = true}
thiserror = "1"
lazy_static = "1.4.0"
futures-lite = "1"
uuid = "*"
strum_macros = "*"

[features]
default = ["serialize", "hash"]
serialize = ["ron", "serde"]
dot = []
hash = []